syntax = "proto3";

option go_package = "github.com/kishorens18/ecommerce";

package customer;

service CustomerService {
    rpc CreateCustomer (CustomerDetails) returns (CustomerResponse);
    rpc CreateTokens(Token)returns(empty);
    rpc UpdatePassword(PasswordDetails) returns(CustomerResponse);
    rpc UpdateCustomer(UpdateDetails)returns(CustomerResponse);
    rpc DeleteCustomer(DeleteDetails) returns (empty) ;
    rpc GetByCustomerId(GetbyId) returns (CustomerDetails);
}

message CustomerDetails {
    string CustomerId = 1;
    string Firstname = 2;
    string Lastname = 3;
    string Password = 4;
    string Email = 5;
    repeated Address Address=6;
     repeated ShippingAddress ShippingAddress=7;
}

message Address {
    string Country =1;
	string Street1 =2;
	string Street2 =3;
	string City    =4;
	string State  =5;
	string Zip     =6;
}
message ShippingAddress {
    string Street1 =1;
	string Street2 =2;
	string City =3;
	string State    =4;
}

message CustomerLoginRequest {
    string Email = 1;
    string Password = 2;
}

message  CustomerResponse {
    string Customer_ID = 1;
}

message empty {
}

message Token {
    string Email = 1;
    string Token = 2;
    string Customerid =3 ;
}
message PasswordDetails {
    string Email =1;
    string OldPassword =2;
    string NewPassword =3;
}


message UpdateDetails {
    string CustomerId =1;
    string Field = 2;
    string OldValue = 3;
    string NewValue=4; 

    
}
message DeleteDetails {
    string CustomerID =1;
}

message GetbyId {
    string token =1;
}

